Including auto detection of the "active" menu item

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -10,14 +10,23 @@
       </div>
     </a>
 
-    <ul class="menu">
-      <a href="download.html"><li>Download</li></a>
-      <a href="documentation.html"><li>Documentation</li></a>
-      <a href="community.html"><li>Community</li></a>
-      <a href="companies.html"><li>Companies</li></a>
-      <a href="support.html"><li>Commercial support</li></a>
-      <a href="http://doc.scrapy.org/en/latest/faq.html"><li>FAQ</li></a>
-    </ul>
+    {% unless page.layout == 'front' %}
+      <ul class="navigation">
+        {% for link in site.navigation %}
+          {% assign current = nil %}
+          {% if page.url == link.url or page.layout == link.layout %}
+            {% assign current = 'current' %}
+          {% endif %}
+
+          <a class="{{ current }}" href="{{ link.url }}">
+            <li class="{% if forloop.first %}first{% endif %} {{ current }} {% if forloop.last %}last{% endif %}">
+              {{ link.text }}
+            </li>
+          </a>
+        {% endfor %}
+        <a href="http://doc.scrapy.org/en/latest/faq.html"><li>FAQ</li></a>
+      </ul>
+    {% endunless %}
 
   </div>
 
