Adjusting HR color and margins for Community page

--- a/css/main.scss
+++ b/css/main.scss
@@ -784,6 +784,9 @@ dl, dd, ol, ul, figure {
 
 		hr {
 			clear:both;
+			border-color:$default-green;
+			margin-top:10px;
+			margin-bottom:10px;
 		}
 	}
 
