--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,7 +2,7 @@
 
   <div class="container">
 
-    <a href="index.html"><div class="logo"></div></a>
+    <a href="{{ site.url }}"><div class="logo"></div></a>
 
     <a href="https://github.com/scrapy/scrapy">
       <div class="github-fork">
@@ -14,11 +14,11 @@
       <ul class="navigation">
         {% for link in site.navigation %}
           {% assign current = nil %}
-          {% if page.url == link.url or page.layout == link.layout %}
+          {% if page.permalink == link.url %}
             {% assign current = 'current' %}
           {% endif %}
 
-          <a class="{{ current }}" href="{{ link.url }}">
+          <a class="{{ current }}" href="../{{ link.url }}">
             <li class="{% if forloop.first %}first{% endif %} {{ current }} {% if forloop.last %}last{% endif %}">
               {{ link.text }}
             </li>
