Adjusting Sample Code Issues

--- a/css/main.scss
+++ b/css/main.scss
@@ -860,6 +860,7 @@ dl, dd, ol, ul, figure {
 	.footer {
 		p {
 		padding:15px 15px;
+		background-color:$dark-brown;
 		}
 		a {
 			font-weight:bold;
